Reworking executors to use eep